web ui: fix bug in control request
introduced in 3a44dedc2e1d5fca6ce21dbf872786c03289a903

--- a/code/esp32/src/oasis/index.html
+++ b/code/esp32/src/oasis/index.html
@@ -765,7 +765,7 @@
                         body: JSON.stringify({
                             updates: [
                                 {
-                                    name: name,
+                                    actuator: name,
                                     value: value,
                                     duration_secs: 30.0,
                                 },
