--- a/code/esp32/src/oasis/index.html
+++ b/code/esp32/src/oasis/index.html
@@ -349,7 +349,7 @@
             <div id="error-message" class="error-message"></div>
         </div>
 
-        <h2>Temporary Controls</h2>
+        <h2>Controls</h2>
         <div class="card">
             <div class="control-item">
                 <label for="lights">Lights</label>
